[project]
name = "encryptsave"
description = "comfyui image encrypt and save."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/chou18194766xx/comfyui-EncryptSave"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui-EncryptSave"
Icon = ""
